Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-56101

Allocator stats not formatted correctly

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown

    Description

      jemalloc pre-5.3.0 used to call the je_malloc_stats_print callback for every line of output and we assumed it did in our code. As of jemalloc 5.3.0 this is no longer true, and results in improperly formatted output.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vesko.karaganev Vesko Karaganev
              vesko.karaganev Vesko Karaganev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty