MB-56101: Call parameterless getDetailedStats

Call the getDetailedStats overload which returns the output as a single
contiguous blob and return that to the client.

Change-Id: Iddd8a54c19fa59b3b76592e783e9466554b1366c
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/188603
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Vesko Karaganev <vesko.karaganev@couchbase.com>